# gtc-sybil

./: README.md  README.rst  pyproject.toml  report.html
notebooks/: 01_analysis.ipynb
