[tool.poetry]
name = "sybil-detection"
version = "0.1.0"
description = ""
authors = ["Jebq"]

[tool.poetry.dependencies]
python = "==3.9.*"
jupyter = "^1.0.0"
pandas = "^1.5.0"
matplotlib = "^3.6.1"
requests = "^2.28.1"
tqdm = "^4.64.1"
pandarallel = "^1.6.3"
openpyxl = "^3.0.10"
scikit-learn = "1.1.1"
joblib = "1.1.0"
scipy = "1.9.1"
numpy = "1.23.1"
threadpoolctl = "2.2.0"
setuptools = "63.4.1"
beautifulsoup4 = "^4.11.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
